syntax = "proto3";
package petri.auction.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/petrichormoney/petri/x/auction/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message SurplusBiddings {
    uint64 bidding_id = 1 [
        (gogoproto.moretags) = "yaml:\"bidding_id\""
    ];

    uint64 auction_id = 2 [
        (gogoproto.moretags) = "yaml:\"auction_id\""
    ];

    string auction_status = 3 [ 
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];

    cosmos.base.v1beta1.Coin auctioned_collateral = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    string bidder = 5 [
        (gogoproto.moretags) = "yaml:\"bidder\""
    ];

    cosmos.base.v1beta1.Coin bid = 6 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    google.protobuf.Timestamp bidding_timestamp = 7 [
        (gogoproto.nullable) = false, 
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"bidding_timestamp\""
    ];

    string bidding_status = 8 [ 
        (gogoproto.moretags) = "yaml:\"bidding_status\""
    ];

    uint64 auction_mapping_id = 9 [
        (gogoproto.moretags) = "yaml:\"auction_mapping_id\""
    ];

    uint64 app_id = 10 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
}


message DebtBiddings {
    uint64 bidding_id = 1 [
        (gogoproto.moretags) = "yaml:\"bidding_id\""
    ];

    uint64 auction_id = 2 [
        (gogoproto.moretags) = "yaml:\"auction_id\""
    ];

    string auction_status = 3 [
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];

    cosmos.base.v1beta1.Coin outflow_tokens = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"outflow_tokens\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    string bidder = 5 [
        (gogoproto.moretags) = "yaml:\"bidder\""
    ];

    cosmos.base.v1beta1.Coin bid = 6 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"bid\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    google.protobuf.Timestamp bidding_timestamp = 7 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"bidding_timestamp\""
    ];

    string bidding_status = 8 [
        (gogoproto.moretags) = "yaml:\"bidding_status\""
    ];

    uint64 auction_mapping_id = 9 [
        (gogoproto.moretags) = "yaml:\"auction_mapping_id\""
    ];

    uint64 app_id = 10 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];
}

message DutchBiddings {
    uint64 bidding_id = 1 [
        (gogoproto.moretags) = "yaml:\"bidding_id\""
    ];

    uint64 auction_id = 2 [
        (gogoproto.moretags) = "yaml:\"auction_id\""
    ];

    string auction_status = 3 [
        (gogoproto.moretags) = "yaml:\"auction_status\""
    ];

    cosmos.base.v1beta1.Coin outflow_token_amount = 4 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"outflow_token_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    cosmos.base.v1beta1.Coin inflow_token_amount = 5 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags)   = "yaml:\"inflow_token_amount\"",
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];

    string bidder = 6 [
        (gogoproto.moretags) = "yaml:\"bidder\""
    ];


    google.protobuf.Timestamp bidding_timestamp = 7 [
        (gogoproto.nullable) = false,
        (gogoproto.stdtime) = true,
        (gogoproto.moretags)   = "yaml:\"bidding_timestamp\""
    ];

    string bidding_status = 8 [
        (gogoproto.moretags) = "yaml:\"bidding_status\""
    ];

    uint64 auction_mapping_id = 9 [
        (gogoproto.moretags) = "yaml:\"auction_mapping_id\""
    ];

    uint64 app_id = 10 [
        (gogoproto.moretags) = "yaml:\"app_id\""
    ];

}
